--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -2,21 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/layout::head('New Book')"></head>
+    <head th:replace="fragments/components::head('New Book')"></head>
     <body>
         <div class="container-fluid">
-            <div th:replace="fragments/layout::header"></div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <ul class="breadcrumb rounded-0 my-0">
-                    <!--<ul class="breadcrumb mt-1">-->
-                        <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
-                        <li class="breadcrumb-item"><a th:href="@{/admin/books}">Books</a></li>
-                        <li class="breadcrumb-item active">New Book</li>
-                    </ul>
-                </div>
-            </div>
-            <div th:replace="fragments/layout::underHead('New Book')"></div>
+            <!-- header -->
+            <div th:replace="fragments/components::header"></div>
+            <!-- main categories -->
+            <div th:replace="fragments/components::mainCatsNavBar"></div>
+            <div th:replace="fragments/components::title(text = 'New Book')"></div>
             <div class="row">
                 <div class="col-sm-2 bg-white"></div>
                 <div class="col-sm-8">
@@ -67,8 +60,16 @@
                                 </div>
                                 <!-------------------------------------------------------------------------New Image-->
                                 <div class="form-group">
-                                    <input type="checkbox" id="switch"/>
-                                    <label for="switch">Select New Image:</label>
+
+                                    <div class="pretty p-default p-round p-thick mb-2">
+                                        <input type="checkbox" id="switch"/>
+                                        <div class="state p-info-o">
+                                            <label for="switch">Select New Image:</label>
+                                        </div>
+                                    </div>
+
+                                    <!--<input type="checkbox" id="switch2"/>
+                                    <label for="switch2">Select New Image:</label>-->
                                     <input class="form-control" type="file" th:field="*{image}" id="input2" disabled accept="image/*" required/>
                                     <div class="invalid-feedback">Please select an image</div>
                                 </div>
@@ -196,7 +197,7 @@
                                 </div>
                                 <div th:replace="fragments/components::backendValidationFieldErrors('price')"></div>
                             </div>
-                            <div class="col-sm-12 bg-white">
+                            <div class="col-sm-12 bg-light">
                                 <button th:replace="fragments/components::saveButton"></button>
                             </div>
                         </div>
@@ -204,7 +205,7 @@
                 </div>
                 <div class="col-sm-2 bg-white"></div>
             </div>
-            <footer th:replace="fragments/layout::footer"></footer>
+            <footer th:replace="fragments/components::footer"></footer>
         </div>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
         <script th:src="@{/js/isbnChecksum.js}"></script>
