--- a/src/main/resources/templates/editPassword.html
+++ b/src/main/resources/templates/editPassword.html
@@ -2,38 +2,40 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/layout::head('Edit Password')"></head>
+    <head th:replace="fragments/components::head('Edit Password')"></head>
     <body>
-        <header th:replace="fragments/layout::header"></header>
-        <div class="container">
-            <ul class="breadcrumb my-2">
-                <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-                <li class="breadcrumb-item active">Edit Password</li>
-            </ul>
-            <h3>Edit Password</h3>
-            <form class="needs-validation" novalidate id="form" th:action="@{/user/editPassword}" th:object="${formPassword}" method="POST" action="#">
-                <div class="form-group">
-                    <label for="currentPassword">Current Password:</label>
-                    <input class="form-control" type="password" th:field="*{currentPassword}" id="currentPassword" placeholder="enter current password" required/>
-                    <div class="invalid-feedback">Please introduce your current password</div>
-                    <div th:replace="fragments/components::backendValidationErrors('currentPassword')"></div>
+        <div class="container-fluid">
+            <header th:replace="fragments/components::header"></header>
+            <header th:replace="fragments/components::title(text = 'Edit Password')"></header>
+            <div class="row">
+                <div class="col-sm-3 bg-white"></div>
+                <div class="col-sm-6 bg-light">
+                    <form class="needs-validation" novalidate id="form" th:action="@{/user/editPassword}" th:object="${formPassword}" method="POST" action="#">
+                        <div class="form-group">
+                            <label for="currentPassword">Current Password:</label>
+                            <input class="form-control" type="password" th:field="*{currentPassword}" id="currentPassword" placeholder="enter current password" required/>
+                            <div class="invalid-feedback">Please introduce your current password</div>
+                            <div th:replace="fragments/components::backendValidationFieldErrors('currentPassword')"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="newPassword">New Password:</label>
+                            <input class="form-control" type="password" th:field="*{password}" id="newPassword" placeholder="enter new password" required th:pattern="${passwordPattern}" th:title="#{password.invalidFormat}"/>
+                            <div class="invalid-feedback" th:text="#{password.invalidFormat}">Please fill out this field with a valid password</div>
+                            <div th:replace="fragments/components::backendValidationFieldErrors('password')"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="newPasswordConfirm">Confirm New Password:</label>
+                            <input class="form-control" type="password" th:field="*{matchingPassword}" id="newPasswordConfirm" placeholder="confirm new password" required pattern=".*" title="Please enter the same password as above"/>
+                            <div class="invalid-feedback" th:text="#{password.notMatching}">Please enter the same password as above</div>
+                            <div th:replace="fragments/components::backendValidationFieldErrors('matchingPassword')"></div>
+                        </div>
+                        <button th:replace="fragments/components::saveButton"></button>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="newPassword">New Password:</label>
-                    <input class="form-control" type="password" th:field="*{password}" id="newPassword" placeholder="enter new password" required th:pattern="${passwordPattern}" th:title="#{password.invalidFormat}"/>
-                    <div class="invalid-feedback" th:text="#{password.invalidFormat}">Please fill out this field with a valid password</div>
-                    <div th:replace="fragments/components::backendValidationErrors('password')"></div>
-                </div>
-                <div class="form-group">
-                    <label for="newPasswordConfirm">Confirm New Password:</label>
-                    <input class="form-control" type="password" th:field="*{matchingPassword}" id="newPasswordConfirm" placeholder="confirm new password" required pattern=".*" title="Please enter the same password as above"/>
-                    <div class="invalid-feedback" th:text="#{password.notMatching}">Please enter the same password as above</div>
-                    <div th:replace="fragments/components::backendValidationErrors('matchingPassword')"></div>
-                </div>
-                <button th:replace="fragments/components::saveButton"></button>
-            </form>
+                <div class="col-sm-3 bg-white"></div>
+            </div>
+            <footer th:replace="fragments/components::fixedFooter"></footer>
         </div>
-        <footer th:replace="fragments/layout::footer"></footer>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
         <script th:src="@{/js/matchingPasswords.js}"></script>
     </body>
