--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -2,31 +2,33 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/layout::head('Edit Profile')"></head>
+    <head th:replace="fragments/components::head('Edit Profile')"></head>
     <body>
         <div class="container-fluid">
-            <div th:replace="fragments/layout::header"></div>
-            <ul class="breadcrumb my-2">
-                <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
-                <li class="breadcrumb-item active">Edit Profile</li>
-            </ul>
-            <h3>Edit Profile</h3>
-            <form class="needs-validation" novalidate th:action="@{/user/editProfile}" th:object="${profile}" method="POST" action="#">
-                <div class="form-group">
-                    <label for="firstName">First Name:</label>
-                    <input class="form-control" type="text" th:field="*{firstName}" id="firstName" placeholder="enter firstName" th:pattern="${textBasicPattern}">
-                    <div class="invalid-feedback">Please fill out this field correctly</div>
-                    <div th:replace="fragments/components::backendValidationErrors('firstName')"></div>
+            <div th:replace="fragments/components::header"></div>
+            <div th:replace="fragments/components::title(text = 'Edit Profile')"></div>
+            <div class="row">
+                <div class="col-sm-3 bg-white"></div>
+                <div class="col-sm-6 bg-light">
+                    <form class="needs-validation" novalidate th:action="@{/user/editProfile}" th:object="${profile}" method="POST" action="#">
+                        <div class="form-group">
+                            <label for="firstName">First Name:</label>
+                            <input class="form-control" type="text" th:field="*{firstName}" id="firstName" placeholder="enter firstName" th:pattern="${textBasicPattern}">
+                            <div class="invalid-feedback">Please fill out this field correctly</div>
+                            <div th:replace="fragments/components::backendValidationFieldErrors('firstName')"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="lastName">Last Name:</label>
+                            <input class="form-control" type="text" th:field="*{lastName}" id="lastName" placeholder="enter lastName" th:pattern="${textBasicPattern}">
+                            <div class="invalid-feedback">Please fill out this field correctly</div>
+                            <div th:replace="fragments/components::backendValidationFieldErrors('lastName')"></div>
+                        </div>
+                        <button th:replace="fragments/components::saveButton"></button>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="lastName">Last Name:</label>
-                    <input class="form-control" type="text" th:field="*{lastName}" id="lastName" placeholder="enter lastName" th:pattern="${textBasicPattern}">
-                    <div class="invalid-feedback">Please fill out this field correctly</div>
-                    <div th:replace="fragments/components::backendValidationErrors('lastName')"></div>
-                </div>
-                <button th:replace="fragments/components::saveButton"></button>
-            </form>
-            <footer th:replace="fragments/layout::footer"></footer>
+                <div class="col-sm-3 bg-white"></div>
+            </div>
+            <footer th:replace="fragments/components::fixedFooter"></footer>
         </div>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
     </body>
