--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -1,13 +1,140 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       lang="en">
+
+    <head th:fragment="head(title)">
+        <meta charset="UTF-8">
+        <title th:text="${title}"></title>
+        <link type="text/css" rel="stylesheet" th:href="@{/css/fmstyle.css}" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <script src="https://kit.fontawesome.com/9902891181.js" crossorigin="anonymous"></script>
+    </head>
 
     <body>
 
+        <!-- Main header -->
+        <div class="row" th:fragment="header">
+            <div class="col-sm-12">
+                <header>
+                    <!-- NavBar -->
+                    <nav class="navbar navbar-expand-sm bg-secondary"><!--navbar-dark-->
+                        <!-- Brand -->
+                        <a class="navbar-brand" th:href="@{/home}">
+                            <img class="rounded-circle" th:src="@{/images/logo.png}" style="width:32px;height:32px;">
+                        </a>
+                        <!-- Toggler/collapsibe Button -->
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <!-- Navbar links -->
+                        <div class="collapse navbar-collapse" id="#collapsibleNavbar">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link text-white font-italic" th:href="@{/home}">FirstMarket</a>
+                                </li>
+                                <!--user dropdown-->
+                                <li class="nav-item dropdown" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
+                                    <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" th:href="@{/user/editProfile}">Profile</a>
+                                        <a class="dropdown-item" th:href="@{/user/purchases}">Purchases</a>
+                                        <a class="dropdown-item" th:href="@{/user/editPassword}">Edit Password</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/admin/newBook}">New Book</a>
+                                </li>
+                                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/admin/categories}">Categories</a>
+                                </li>
+                                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/admin/images}">Images</a>
+                                </li>
+                                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/admin/users}">Users</a>
+                                </li>
+                                <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/admin/purchases}">Purchases</a>
+                                </li>
+                            </ul>
+                            <ul class="navbar-nav">
+                                <!--user greeting-->
+                                <li class="navbar-text" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
+                                    <small class="text-white">Hi, <span th:text="${firstName}"/>!</small>
+                                </li>
+                                <!--cart-->
+                                <li class="nav-item" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
+                                    <a class="nav-link" th:href="@{/user/cart}" data-toggle="tooltip" title="View Cart">
+                                            <span class="fa-stack has-badge mx-2" id="cart" th:data-count="${cartSize}">
+                                                <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+                                                <i class="fa fa-shopping-cart fa-stack-2x info-over-secondary"></i>
+                                            </span>
+                                    </a>
+                                </li>
+                                <!--admin greeting-->
+                                <li class="navbar-text" sec:authorize="hasRole('ADMIN')">
+                                    <small class="text-info font-weight-bold">Admin</small>
+                                </li>
+                            </ul>
+                            <!--logout-->
+                            <form class="form-inline p-2" sec:authorize="isAuthenticated()" th:action="@{/logout}" method="POST" id="logoutForm" action="#">
+                                <button class="btn btn-outline-info btn-sm mx-2" type="submit">
+                                    <small class="font-weight-bold text-white">Logout<i class="fas fa-sign-out-alt ml-2"></i></small>
+                                </button>
+                            </form>
+                            <!--login-->
+                            <a class="btn btn-outline-info btn-sm mx-2" sec:authorize="!isAuthenticated()" th:href="@{/login}">
+                                <small class="font-weight-bold text-white">Login<i class="fas fa-sign-in-alt ml-2"></i></small>
+                            </a>
+                        </div>
+                    </nav>
+                </header>
+            </div>
+        </div>
+
+        <!-- Secondary navbar with main categories -->
+        <div class="row" th:fragment="mainCatsNavBar">
+            <div class="col-sm-12">
+                <!-- NavBar -->
+                <nav class="navbar navbar-expand-sm p-0 m-0" style="background-color:#e9ecef">
+                    <!-- Toggler/collapsibe Button -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- Navbar links -->
+                    <div class="collapse navbar-collapse" id="#collapsibleNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item" th:each="cat : ${mainCategories}">
+                                <a class="categoryLink btn btn-outline-info btn-sm border-0 rounded-0" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+
+        <!-- Title -->
+        <div class="row" th:fragment="title(text)">
+            <div class="col-sm-12 bg-white">
+                <h2 class="text-center my-4" th:text="${text}"></h2>
+            </div>
+        </div>
+
+        <!-- Save button -->
+        <button th:fragment="saveButton" class="btn btn-info px-5 mb-3" type="submit">Save</button>
+
+        <!--
         <button th:fragment="saveButton" class="btn btn-outline-info btn-block font-weight-bold my-2" type="submit">
             Save
         </button>
+        -->
 
         <div th:fragment="addButton(action)">
             <a class="btn btn-outline-info btn-sm my-2 px-5 float-right" th:href="@{/admin/{param}(param=${action})}">Add</a>
@@ -59,6 +186,22 @@
             let numberOfElements = [[${pageOfBooks.numberOfElements}]];
             let pageSize = [[${pageOfBooks.size}]];
         </script>
+
+        <!-- Botton fixed footer -->
+        <div class="fixed-footer mb-3" th:fragment="fixedFooter">
+            <div class="bg-light text-center">
+                <span class="info-copyrigth"><a class="text-info" href="https://github.com/misrraimsp/firstmarket" style="text-decoration: none">FirstMarket</a> © 2020</span>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <div class="row" th:fragment="footer">
+            <div class="col-sm-12 mt-5">
+                <footer class="bg-light text-center">
+                    <span class="info-copyrigth"><a class="text-info" href="https://github.com/misrraimsp/firstmarket" style="text-decoration: none">FirstMarket</a> © 2020</span>
+                </footer>
+            </div>
+        </div>
 
     </body>
 
