--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,33 +2,37 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/layout::head('Login')"></head>
+    <head th:replace="fragments/components::head('Login')"></head>
     <body>
         <div class="container-fluid">
-            <header th:replace="fragments/layout::header"></header>
-            <div th:replace="fragments/layout::underHead('Login')"></div>
+            <!-- header -->
+            <header th:replace="fragments/components::header"></header>
+            <!-- title -->
+            <div th:replace="fragments/components::title(text = 'Login')"></div>
             <div class="row">
                 <div class="col-sm-3 bg-white"></div>
                 <div class="col-sm-6 bg-light">
                     <form class="needs-validation" novalidate th:action="@{/login}" method="POST" action="#">
+                        <!-- email -->
                         <div class="form-group">
                             <label for="email">E-mail:</label>
                             <input class="form-control" type="email" id="email" placeholder="enter email" name="username" required>
                             <div class="invalid-feedback">Please fill out this field with your email</div>
                         </div>
+                        <!-- password -->
                         <div class="form-group">
                             <label for="password">Password:</label>
                             <input class="form-control" type="password" id="password" placeholder="enter password" name="password" required>
                             <div class="invalid-feedback">Please fill out this field</div>
                         </div>
-                        <button class="btn btn-info" type="submit">Login</button>
+                        <button class="btn btn-info px-5" type="submit">Login</button>
                     </form>
                     <br/>
                     <span>New? Click <a class="font-weight-bolder text-info" th:href="@{/newUser}" style="text-decoration: none">here</a> to register.</span>
                 </div>
                 <div class="col-sm-3 bg-white"></div>
             </div>
-            <footer th:replace="fragments/layout::fixedFooter"></footer>
+            <footer th:replace="fragments/components::fixedFooter"></footer>
         </div>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
     </body>
