--- a/src/main/resources/templates/newCategory.html
+++ b/src/main/resources/templates/newCategory.html
@@ -2,36 +2,37 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/layout::head('New Category')"></head>
+    <head th:replace="fragments/components::head('New Category')"></head>
     <body>
-        <header th:replace="fragments/layout::header"></header>
-        <div class="container">
-            <ul class="breadcrumb my-2">
-                <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
-                <li class="breadcrumb-item"><a th:href="@{/admin/categories}">Categories</a></li>
-                <li class="breadcrumb-item active">New Category</li>
-            </ul>
-            <h3>New Category</h3>
-            <form class="needs-validation" novalidate th:action="@{/admin/newCategory}" th:object="${category}" method="POST" action="#">
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input class="form-control" type="text" th:field="*{name}" id="name" placeholder="enter name" th:pattern="${textBasicPattern}">
-                    <div class="invalid-feedback">Please fill out this field correctly</div>
-                    <div th:replace="fragments/components::backendValidationErrors('name')"></div>
+        <div class="container-fluid">
+            <header th:replace="fragments/components::header"></header>
+            <header th:replace="fragments/components::title(text = 'New Category')"></header>
+            <div class="row">
+                <div class="col-sm-3 bg-white"></div>
+                <div class="col-sm-6 bg-light">
+                    <form class="needs-validation" novalidate th:action="@{/admin/newCategory}" th:object="${category}" method="POST" action="#">
+                        <div class="form-group">
+                            <label for="name">Name:</label>
+                            <input class="form-control" type="text" th:field="*{name}" id="name" placeholder="enter name" th:pattern="${textBasicPattern}">
+                            <div class="invalid-feedback">Please fill out this field correctly</div>
+                            <div th:replace="fragments/components::backendValidationErrors('name')"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="parent">Nested under:</label>
+                            <select class="custom-select" th:field="*{parent.id}" id="parent" >
+                                <option th:each="ic : ${indentedCategories}"
+                                        th:value="${ic.id}"
+                                        th:text="${ic.name}">
+                                </option>
+                            </select>
+                        </div>
+                        <button th:replace="fragments/components::saveButton"></button>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="parent">Nested under:</label>
-                    <select class="custom-select" th:field="*{parent.id}" id="parent" >
-                        <option th:each="ic : ${indentedCategories}"
-                                th:value="${ic.id}"
-                                th:text="${ic.name}">
-                        </option>
-                    </select>
-                </div>
-                <button th:replace="fragments/components::saveButton"></button>
-            </form>
+                <div class="col-sm-3 bg-white"></div>
+            </div>
+            <footer th:replace="fragments/components::footer"></footer>
         </div>
-        <footer th:replace="fragments/layout::footer"></footer>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
     </body>
 </html>
