--- a/src/main/resources/templates/purchases.html
+++ b/src/main/resources/templates/purchases.html
@@ -2,36 +2,38 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/layout::head('Purchases')"></head>
+    <head th:replace="fragments/components::head('Purchases')"></head>
     <body>
-        <header th:replace="fragments/layout::header"></header>
-        <div class="container">
-            <ul class="breadcrumb my-2">
-                <li class="breadcrumb-item"><a th:href="@{/home}">Home</a></li>
-                <li class="breadcrumb-item active">My Purchases</li>
-            </ul>
-            <div th:replace="fragments/layout::underHead('My Purchases')"></div>
-            <table class="table" th:each="purchase : ${purchases}">
-                <thead class="thead-light">
-                <tr>
-                    <th th:text="${purchase.id}">id</th>
-                    <th>ISBN</th>
-                    <th>Title</th>
-                    <th>Image</th>
-                    <th>Quantity</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="item : ${purchase.items}">
-                    <td></td>
-                    <td><span th:text="${item.book.isbn}">isbn</span></td>
-                    <td><span th:text="${item.book.title}">title</span></td>
-                    <td><img th:src="@{/image/{id}(id=${item.book.image.id})}" style="width:64px;height:64px;"></td>
-                    <td><span th:text="${item.quantity}">quantity</span></td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="container-fluid">
+            <header th:replace="fragments/components::header"></header>
+            <div th:replace="fragments/components::title(text = 'My Purchases')"></div>
+            <div class="row">
+                <div class="col-sm-2 bg-white"></div>
+                <div class="col-sm-8 bg-light">
+                    <table class="table" th:each="purchase : ${purchases}">
+                        <thead class="thead-light">
+                        <tr>
+                            <th th:text="${purchase.id}">id</th>
+                            <th>ISBN</th>
+                            <th>Title</th>
+                            <th>Image</th>
+                            <th>Quantity</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="item : ${purchase.items}">
+                            <td></td>
+                            <td><span th:text="${item.book.isbn}">isbn</span></td>
+                            <td><span th:text="${item.book.title}">title</span></td>
+                            <td><img th:src="@{/image/{id}(id=${item.book.image.id})}" style="width:64px;height:64px;"></td>
+                            <td><span th:text="${item.quantity}">quantity</span></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-sm-2 bg-white"></div>
+            </div>
+            <footer th:replace="fragments/components::footer"></footer>
         </div>
-        <footer th:replace="fragments/layout::footer"></footer>
     </body>
 </html>
